# zabbix-api-rs

./: .gitignore  Cargo.toml  DEV.md  LICENSE  Makefile  README.md  docker-compose-v6.yml  docker-compose-v7.yml  docker-compose.yml  run-example.sh  run-integration-tests-v6.sh  run-integration-tests-v7.sh  run-integration-tests.sh
docs/: README.md  zabbix-api-6-skf.txt  zabbix-api-7-skf.txt
examples/: README.md  api_basics.rs  create_host_example.rs  create_host_group_example.rs  create_item_example.rs  create_user_example.rs  create_user_group_example.rs  create_webscenario_example.rs  get_host_groups_example.rs  get_hosts_example.rs  get_items_example.rs  get_triggers_example.rs  get_user_groups_example.rs  get_users_example.rs  get_webscenarios_example.rs  raw_api_call_example.rs
examples/hello/: Cargo.toml
examples/hello/src/: classes.rs  functions.rs  main.rs  test.rs
src/: error.rs  lib.rs
src/client/: client.rs  jsonrpc.rs  mod.rs  post.rs  request.rs  response.rs
src/client/v6/: client.rs  mod.rs  request.rs
src/client/v7/: request.rs
src/host/: create.rs  get.rs  mod.rs  model.rs  update.rs
src/hostgroup/: create.rs  get.rs  model.rs
src/item/: create.rs  get.rs  mod.rs  model.rs
src/macro/: create.rs  macrotype.rs  mod.rs  model.rs
src/template/: mod.rs  model.rs
src/tests/: builder.rs  integration.rs  mod.rs  strings.rs
src/trigger/: create.rs  get.rs  mod.rs  model.rs  search.rs
src/user/: create.rs  mod.rs  model.rs
src/usergroup/: get.rs  mod.rs  model.rs
src/webscenario/: create.rs  get.rs  mod.rs  model.rs
