[package]
name = "zabbix-api"
version = "0.3.1"
authors = ["Eugene Lebedev <eugene.0x90@gmail.com>"]
edition = "2021"
description = "Zabbix API client"
license = "MIT"
homepage = "https://github.com/lebe-dev/zabbix-api-rs"
repository = "https://github.com/lebe-dev/zabbix-api-rs"
readme = "README.md"
keywords = ["zabbix", "api"]
categories = ["api-bindings"]

[dependencies]
thiserror = "1.0.63"

serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

reqwest = { version = "0.12.7", features = ["blocking", "json"] }

log = "0.4.22"

[dev-dependencies]
env_logger = "0.11.5"
fake = "2.9.2"