[package]
name = "zabbix-api"
version = "0.4.0"
authors = ["Eugene Lebedev <eugene.0x90@gmail.com>"]
edition = "2021"
description = "Zabbix API client"
license = "MIT"
homepage = "https://github.com/lebe-dev/zabbix-api-rs"
repository = "https://github.com/lebe-dev/zabbix-api-rs"
readme = "README.md"
keywords = ["zabbix", "api"]
categories = ["api-bindings"]

[features]
default = ["v7", "v6"]
v7 = []
v6 = []

[dependencies]
thiserror = "2.0.12"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"

reqwest = { version = "0.12.15", features = ["blocking", "json"] }

log = "0.4.27"

[dev-dependencies]
env_logger = "0.11.8"
fake = "4.3.0"
