[package]
name = "zabbix-api"
version = "0.6.0"
authors = ["Eugene Lebedev <eugene.0x90@gmail.com>"]
edition = "2021"
description = "Zabbix API client"
license = "MIT"
homepage = "https://github.com/lebe-dev/zabbix-api-rs"
repository = "https://github.com/lebe-dev/zabbix-api-rs"
readme = "README.md"
keywords = ["zabbix", "api"]
categories = ["api-bindings"]

[features]
default = ["v7", "full"]
v7 = []
v6 = []
full = ["host", "item", "trigger", "user", "webscenario"]
host = []
item = []
trigger = []
user = []
webscenario = []

[dependencies]
thiserror = "2.0.12"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"

reqwest = { version = "0.12.15", features = ["blocking", "json"] }

log = "0.4.27"

[dev-dependencies]
env_logger = "0.11.8"
fake = "4.3.0"

[[example]]
name = "api_basics"
path = "examples/api_basics.rs"

[[example]]
name = "get_hosts_example"
path = "examples/get_hosts_example.rs"

[[example]]
name = "get_host_groups_example"
path = "examples/get_host_groups_example.rs"

[[example]]
name = "create_host_group_example"
path = "examples/create_host_group_example.rs"

[[example]]
name = "create_item_example"
path = "examples/create_item_example.rs"

[[example]]
name = "get_items_example"
path = "examples/get_items_example.rs"

[[example]]
name = "raw_api_call_example"
path = "examples/raw_api_call_example.rs"

[[example]]
name = "get_triggers_example"
path = "examples/get_triggers_example.rs"

[[example]]
name = "get_webscenarios_example"
path = "examples/get_webscenarios_example.rs"

[[example]]
name = "get_users_example"
path = "examples/get_users_example.rs"

[[example]]
name = "create_host_example"
path = "examples/create_host_example.rs"
